# nginee

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  RATIONALE.md  README.md  VISION.md  examples.html  index.html  print.html  searchindex.js  searchindex.json  tarpaulin.toml
.github/workflows/: ci.yml  publish_book.yml  user_guide.yml
crate/event_loop/: Cargo.toml
crate/event_loop/src/: error.rs  event_handler.rs  event_handler_result.rs  event_handling_outcome.rs  event_loop.rs  lib.rs  rate_limit.rs
crate/event_loop/src/event_loop/: common.rs  headless.rs  rate_limit_async_std.rs  rate_limit_governor.rs  rate_limit_off.rs  rate_limit_on.rs  window.rs
crate/event_loop/src/event_loop/common/: event_handlers_ext.rs  rate_limiter.rs
crate/event_loop/src/event_loop/headless/: rate_limit_off.rs  rate_limit_on.rs
crate/event_loop/src/event_loop/window/: rate_limit_off.rs  rate_limit_on.rs
crate/event_loop/src/rate_limit/: async_std.rs
crate/iced/: Cargo.toml
crate/iced/src/: iced_winit.rs  lib.rs
crate/workspace_tests/: Cargo.toml  tarpaulin.toml
crate/workspace_tests/src/: lib.rs  nginee_event_loop.rs
crate/workspace_tests/src/nginee_event_loop/: error.rs  event_handling_outcome.rs  event_loop.rs  rate_limit.rs
crate/workspace_tests/src/nginee_event_loop/event_loop/: headless.rs  window.rs
crate/workspace_tests/src/nginee_event_loop/rate_limit/: async_std.rs
doc/: book.toml
doc/src/: SUMMARY.md  examples.md
doc/src/examples/: event_loop.md  event_loop_console.md  event_loop_rate_limit.md
examples/: event_loop.html  event_loop.rs  event_loop_console.html  event_loop_rate_limit.html
examples/event_loop/: Cargo.toml  index.html
examples/event_loop/src/: error.rs  lib.rs  main.rs
examples/event_loop_console/: Cargo.toml  index.html  main.rs
examples/event_loop_console/src/: error.rs  lib.rs  main.rs
examples/event_loop_rate_limit/: Cargo.toml  index.html  main.rs
examples/event_loop_rate_limit/src/: lib.rs  main.rs
examples/iced_integration/: Cargo.toml  index.html
examples/iced_integration/src/: counter.rs  lib.rs  main.rs
pkg/: event_loop.d.ts  event_loop.js  event_loop_bg.d.ts  event_loop_bg.wasm  event_loop_console.d.ts  event_loop_console.js  event_loop_console_bg.d.ts  event_loop_console_bg.wasm  event_loop_rate_limit.d.ts  event_loop_rate_limit.js  event_loop_rate_limit_bg.d.ts  event_loop_rate_limit_bg.wasm  package.json
pkg/snippets/event_loop_console-30a75f6eee508957/: inline0.js
src/: lib.rs
