[package]
name = "nginee"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[lib]
doctest = false
test = false
crate-type = ["cdylib", "rlib"]

[dependencies]
nginee_event_loop = { version = "0.1.0", path = "crate/event_loop", optional = true }

[workspace]
members = ["crate/*", "examples/*"]

[features]
default = ["event_loop"]

event_loop = ["nginee_event_loop"]
rate_limit = ["nginee_event_loop/rate_limit"]

wasm-bindgen = ["nginee_event_loop/wasm-bindgen"]

[dev-dependencies]
example_event_loop = { path = "examples/event_loop" }
example_event_loop_console = { path = "examples/event_loop_console" }
example_event_loop_rate_limit = { path = "examples/event_loop_rate_limit" }

[patch.crates-io]
# https://github.com/antifuchs/governor/pull/35
governor = { git = "https://github.com/azriel91/governor.git", rev = "43e1b67" }
# Needs `parking_lot` release > "0.10.2"
parking_lot = { git = "https://github.com/Amanieu/parking_lot.git", rev = "715d086" }
