[package]
name = "nginee_event_loop"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
futures = { version =  "0.3.5", default-features = false }
governor = { version = "0.2.0", default-features = false, features = ["std"], optional = true }
parking_lot = { version = "0.10.2", optional = true }

[features]
default = []
rate_limit = ["governor"]
wasm-bindgen = ["governor/wasm-bindgen", "parking_lot/wasm-bindgen"]
