[package]
name = "nginee_event_loop"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
description = "Nginee - event loop abstraction."
edition = "2018"
keywords = ["nginee", "event", "loop"]
license = "Zlib"
repository = "https://github.com/azriel91/nginee/crate/event_loop"
documentation = "https://docs.rs/nginee_event_loop"
categories = ["game-development"]

[lib]
doctest = false

[dependencies]
futures = { version =  "0.3.5", default-features = false }
governor = { version = "0.2.0", default-features = false, features = ["std"], optional = true }
instant = { version =  "0.1.4", default-features = false, optional = true }
parking_lot = { version = "0.10.2", optional = true }
winit = { version = "0.22.2", optional = true }

[features]
default = []
rate_limit = ["governor"]
wasm-bindgen = ["governor/wasm-bindgen", "parking_lot/wasm-bindgen"]
window = ["futures/executor", "instant", "winit"]

[dev-dependencies]
crossbeam-channel = "0.4.2"
smol = "0.1.4"
