[package]
name = "workspace_tests"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[dev-dependencies]
crossbeam = "0.7.3"
nginee = { path = "../..", features = ["event_loop"] }
smol = "0.1.4"

[features]
default = ["event_loop", "rate_limit"]

event_loop = ["nginee/event_loop"]
rate_limit = ["nginee/rate_limit"]
