[package]
name = "example_event_loop"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[[bin]]
name = "example_event_loop"
test = false

[lib]
doctest = false
test = false
crate-type = ["cdylib", "rlib"]

[dependencies]
nginee = { path = "../.." }
async-std = "1.6.0-beta.1"
# `smol` still needs work for WASM support.
# https://github.com/stjepang/smol/issues/87
# smol = "0.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.62"
