[package]
name = "event_loop_rate_limit"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[[bin]]
name = "event_loop_rate_limit"
test = false

[lib]
doctest = false
test = false
crate-type = ["cdylib", "rlib"]

[dependencies]
nginee = { path = "../..", features = ["rate_limit"] }
async-std = "1.6.0-beta.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
nginee = { path = "../..", features = ["rate_limit", "wasm-bindgen"] }
wasm-bindgen = "0.2.62"

[features]
window = ["nginee/window"]
