[package]
name = "iced_integration"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"

[[bin]]
name = "iced_integration"
test = false

[lib]
doctest = false
test = false
crate-type = ["cdylib", "rlib"]

[dependencies]
nginee = { path = "../..", features = ["iced", "rate_limit"] }
async-std = "1.6.0-beta.1"
iced = { git = "https://github.com/azriel91/iced", branch = "spike/313/less-frameworky-integration" }
iced_winit = { git = "https://github.com/azriel91/iced", branch = "spike/313/less-frameworky-integration" }
iced_wgpu = { git = "https://github.com/azriel91/iced", branch = "spike/313/less-frameworky-integration" }
instant = "0.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.62"
